force-app/main/default/objects/Oferta_pracy__c/Oferta_pracy__c.object-meta.xml
<CustomObject>
    <description>Oferta pracy</description>
    <label>Oferta pracy</label>
    <nameField>
        <displayFormat>O-{0000000000}</displayFormat>
        <label>Numer Oferty</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oferty pracy</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>