force-app/main/default/objects/Oferta_pracy__c/fields/Czas_rekrutacji__c.field-meta.xml
<CustomField>
    <fullName>Czas_rekrutacji__c</fullName>
    <description>Czas rekrutacji</description>
    <inlineHelpText>Czas rekrutacji</inlineHelpText>
    <label>Czas rekrutacji</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>