force-app/main/default/objects/Oferta_pracy__c/fields/Data_publikacji__c.field-meta.xml
<CustomField>
    <fullName>Data_publikacji__c</fullName>
    <description>Data publikacji oferty</description>
    <inlineHelpText>Data publikacji oferty</inlineHelpText>
    <label>Data publikacji</label>
    <type>Date</type>
</CustomField>