force-app/main/default/objects/Oferta_pracy__c/fields/Dzial__c.field-meta.xml
<CustomField>
    <fullName>Dzial__c</fullName>
    <description>Dział którego dotyczy oferta</description>
    <inlineHelpText>Dział którego dotyczy oferta</inlineHelpText>
    <label>Dział</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>