force-app/main/default/objects/Oferta_pracy__c/fields/Lokalizacja__c.field-meta.xml
<CustomField>
    <fullName>Lokalizacja__c</fullName>
    <description>Lokalizacja oferty</description>
    <inlineHelpText>Lokalizacja oferty</inlineHelpText>
    <label>Lokalizacja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warszawa</fullName>
            </value>
            <value>
                <fullName>Zdalna</fullName>
            </value>
            <value>
                <fullName>Kraków</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>