force-app/main/default/objects/Oferta_pracy__c/fields/Menedzer_rekrutujacy__c.field-meta.xml
<CustomField>
    <fullName>Menedzer_rekrutujacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Menedżer odpowiedzialny za rekrutacje</description>
    <inlineHelpText>Menedżer odpowiedzialny za rekrutacje</inlineHelpText>
    <label>Menedżer rekrutujący</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oferty_pracy</relationshipName>
    <type>Lookup</type>
</CustomField>