force-app/main/default/objects/Oferta_pracy__c/fields/Opis__c.field-meta.xml
<CustomField>
    <fullName>Opis__c</fullName>
    <description>Opis oferty</description>
    <inlineHelpText>Opis oferty</inlineHelpText>
    <label>Opis</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>