force-app/main/default/objects/Oferta_pracy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status oferty</description>
    <inlineHelpText>Status oferty</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W przygotowaniu</fullName>
                <default>true</default>
                <label>W przygotowaniu</label>
            </value>
            <value>
                <fullName>Aktywna</fullName>
            </value>
            <value>
                <fullName>Zamknięta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>