force-app/main/default/objects/Oferta_pracy__c/fields/Tytul__c.field-meta.xml
<CustomField>
    <fullName>Tytul__c</fullName>
    <description>Tytuł Oferty Pracy</description>
    <inlineHelpText>Tytuł Oferty Pracy</inlineHelpText>
    <label>Tytuł</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>