force-app/main/default/objects/Oferta_pracy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tytul__c</columns>
    <columns>Dzial__c</columns>
    <columns>Data_publikacji__c</columns>
    <columns>Lokalizacja__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>